--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,18 @@
         <version>7.3.0</version>
     </dependency>
 
+    <dependency>
+        <groupId>io.rest-assured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <version>4.5.1</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.9.2</version>
+    </dependency>
+
 
 </dependencies>
 
